bench: record JVM GC pauses and live heap per run, restart the JVM when the heap is retained
PackTest's DummyClientConnection extends vanilla Connection without a channel, so
every packet sent to a dummy player is queued in its pending actions forever. Dense
rays (40 dummies, 1008 hits/tick) retains ~2.8 GB per 10-second run; run 3 of a 6 GB
session died with OutOfMemoryError, run-to-run drift (147 -> 133 -> 116 profile
ticks) and 500 ms pauses were GC, not datapack regressions, and even run 1 carries
~6.5 ms/tick of GC pauses that /perf attributes to whatever section was running.

- The server starts with `-Xlog:gc:file=gc.log:time,uptime`; harness/gc_log.py parses
  the pauses and every run JSON gets `gc` = {pauses, full_pauses, total_ms, max_ms,
  ms_per_tick, heap_after_mb, heap_capacity_mb} for the /perf window.
- Summary, comparison and suite tables show GC pauses ms/tick and the live heap after
  GC per run; the runner prints them per run.
- When more than half the heap is still live after a run, the runner stops the JVM
  and boots a fresh one (command limit + fixture again) before the next run, and
  records `jvm_restarts_before_runs` in metadata.json and the summary.
- bench.py reconfigures stdout to UTF-8: `compare` crashed on Windows when
  redirected to a file ('charmap' cannot encode the Δ used in reports).

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>